# marketing-copilot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.jsx  api.js  index.css
app/src/components/: BriefForm.jsx  PublishModal.jsx  ReviewCards.jsx  RunProgress.jsx  Sidebar.jsx  ui.jsx
backend/: .dockerignore  Dockerfile  entrypoint.sh  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  store.py
backend/app/agents/: __init__.py  copywriter.py  critic.py  strategist.py
backend/app/eval/: __init__.py  golden.py  runner.py
backend/app/graph/: __init__.py  build.py  state.py
backend/app/guardrails/: __init__.py  checks.py
backend/app/llm/: __init__.py  client.py
backend/app/llm/prompts/: __init__.py  copywriter.py  critic.py  strategist.py
backend/app/publishing/: base.py  linkedin.py  registry.py  stub.py  twitter.py
backend/app/routers/: campaigns.py  publishing.py
backend/app/services/: __init__.py  orchestrator.py
backend/tests/: conftest.py  test_api.py  test_checks.py  test_copywriter.py  test_critic.py  test_golden_eval.py  test_graph.py  test_health.py  test_llm_client.py  test_models.py  test_publishing.py  test_strategist.py
